Add cross-repo analysis with AI-powered dependency management, web dashboard, and comprehensive documentation

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules/
 *.log
 .env
 .vscode/
+# CodeFlow workspace
+.codeflow-workspace/
+cross-repo-analysis-report.json
+analysis-history.json
